--- a/package.json
+++ b/package.json
@@ -17,14 +17,11 @@
   },
   "homepage": "https://github.com/safari137/stock_market#readme",
   "dependencies": {
-    "body-parser": "^1.15.0",
-    "connect-flash": "^0.1.1",
     "dotenv": "^2.0.0",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
-    "express-session": "^1.13.0",
     "mongoose": "^4.4.7",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "request": "^2.69.0",
+    "socket.io": "^1.4.5"
   }
 }
